fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   --navlinkcolor: #f1f1f1;
   --navlinkvisited: #f1f1f1;
   --navlinkhovercolor: #1BDC88;
+  --navlinkbg: rgba(80, 80, 80, 0.30);
   --themebg: #f1f1f1;
   --themeborder: #1BDC88;
   --animatedformcolor: #1BDC88;
@@ -139,7 +140,7 @@ header h1 {
 
 #menu a.active,
 #menu a:hover {
-  background-color: #333333;
+  background-color: var(--navlinkbg);
   /*border-radius: 1em;
   padding: .5em .5em; /*top bottom left right padding, introducing it with linear transition moves the text to respect li padding to remove this effect add the same padding in a "non active"*/
   transition: linear 0.14s;
